<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mydata"
            android:icon="@drawable/mydataico"
            android:title="@string/home_title" />
        <item
            android:id="@+id/nav_tpreq"
            android:icon="@drawable/ic_mail_black_24dp"
            android:title="@string/req_title" />


    </group>

    <item android:title = "Other">

        <menu>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit"
                android:title="@string/logout" />
        </menu>

    </item>
</menu>