<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DeveloperActivity"
    tools:layout_editor_absoluteY="81dp">

    <android.support.constraint.Guideline
        android:id="@+id/guideline91"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline93"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline94"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05109489" />

    <Switch
        android:id="@+id/main_log"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/main_log"
        app:layout_constraintBottom_toTopOf="@+id/guideline101"
        app:layout_constraintEnd_toStartOf="@+id/guideline111"
        app:layout_constraintStart_toStartOf="@+id/guideline94"
        app:layout_constraintTop_toTopOf="@+id/guideline99" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline99"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04809287" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline101"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline102"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

    <Switch
        android:id="@+id/signup_log"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dev_signup"
        app:layout_constraintBottom_toTopOf="@+id/guideline101"
        app:layout_constraintEnd_toStartOf="@+id/guideline93"
        app:layout_constraintStart_toStartOf="@+id/guideline110"
        app:layout_constraintTop_toTopOf="@+id/guideline99" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline103"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline104"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.34" />

    <Switch
        android:id="@+id/mydata_log"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dev_data"
        app:layout_constraintBottom_toTopOf="@+id/guideline103"
        app:layout_constraintEnd_toStartOf="@+id/guideline111"
        app:layout_constraintStart_toStartOf="@+id/guideline94"
        app:layout_constraintTop_toTopOf="@+id/guideline102" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline105"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline106"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <Switch
        android:id="@+id/req_log"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dev_req"
        app:layout_constraintBottom_toTopOf="@+id/guideline103"
        app:layout_constraintEnd_toStartOf="@+id/guideline93"
        app:layout_constraintStart_toStartOf="@+id/guideline110"
        app:layout_constraintTop_toTopOf="@+id/guideline102" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline107"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <EditText
        android:id="@+id/dev_serv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/server"
        android:inputType="textUri"
        app:layout_constraintBottom_toTopOf="@+id/guideline91"
        app:layout_constraintEnd_toStartOf="@+id/guideline111"
        app:layout_constraintStart_toStartOf="@+id/guideline94"
        app:layout_constraintTop_toTopOf="@+id/guideline100" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline108"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />

    <EditText
        android:id="@+id/dev_hb_mean"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/dev_hb"
        app:layout_constraintBottom_toTopOf="@+id/guideline105"
        app:layout_constraintEnd_toStartOf="@+id/guideline111"
        app:layout_constraintStart_toStartOf="@+id/guideline94"
        app:layout_constraintTop_toTopOf="@+id/guideline104" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline109"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline110"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.52" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline111"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.48" />

    <EditText
        android:id="@+id/dev_hb_sd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/dev_hb_sd"
        app:layout_constraintBottom_toTopOf="@+id/guideline105"
        app:layout_constraintEnd_toStartOf="@+id/guideline93"
        app:layout_constraintStart_toStartOf="@+id/guideline110"
        app:layout_constraintTop_toTopOf="@+id/guideline104" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline112"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline113"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />

    <EditText
        android:id="@+id/dev_bpmax_mean"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/bp_dev"
        app:layout_constraintBottom_toTopOf="@+id/guideline107"
        app:layout_constraintEnd_toStartOf="@+id/guideline111"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline94"
        app:layout_constraintTop_toTopOf="@+id/guideline106"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/dev_bpmax_sd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/dev_bp_sd"
        app:layout_constraintBottom_toTopOf="@+id/guideline107"
        app:layout_constraintEnd_toStartOf="@+id/guideline93"
        app:layout_constraintStart_toStartOf="@+id/guideline110"
        app:layout_constraintTop_toTopOf="@+id/guideline106" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline114"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline115"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <EditText
        android:id="@+id/dev_sleep_mean"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/dev_sleep_min"
        app:layout_constraintBottom_toTopOf="@+id/guideline113"
        app:layout_constraintEnd_toStartOf="@+id/guideline111"
        app:layout_constraintStart_toStartOf="@+id/guideline94"
        app:layout_constraintTop_toTopOf="@+id/guideline112" />

    <EditText
        android:id="@+id/dev_sleep_sd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/dev_sleep_max"
        app:layout_constraintBottom_toTopOf="@+id/guideline113"
        app:layout_constraintEnd_toStartOf="@+id/guideline93"
        app:layout_constraintStart_toStartOf="@+id/guideline110"
        app:layout_constraintTop_toTopOf="@+id/guideline112" />

    <EditText
        android:id="@+id/dev_steps_mean"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/dev_step_min"
        app:layout_constraintBottom_toTopOf="@+id/guideline115"
        app:layout_constraintEnd_toStartOf="@+id/guideline111"
        app:layout_constraintStart_toStartOf="@+id/guideline94"
        app:layout_constraintTop_toTopOf="@+id/guideline114" />

    <EditText
        android:id="@+id/dev_step_sd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/dev_step_max"
        app:layout_constraintBottom_toTopOf="@+id/guideline115"
        app:layout_constraintEnd_toStartOf="@+id/guideline93"
        app:layout_constraintStart_toStartOf="@+id/guideline110"
        app:layout_constraintTop_toTopOf="@+id/guideline114"
        app:layout_constraintVertical_bias="0.39999998" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline118"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline119"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />

    <android.support.design.button.MaterialButton
        android:id="@+id/dev_reset"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/res_but"
        app:layout_constraintBottom_toTopOf="@+id/guideline119"
        app:layout_constraintEnd_toStartOf="@+id/guideline111"
        app:layout_constraintStart_toStartOf="@+id/guideline94"
        app:layout_constraintTop_toTopOf="@+id/guideline118" />

    <android.support.design.button.MaterialButton
        android:id="@+id/dev_confirm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dev_conf"
        app:layout_constraintBottom_toTopOf="@+id/guideline119"
        app:layout_constraintEnd_toStartOf="@+id/guideline93"
        app:layout_constraintStart_toStartOf="@+id/guideline110"
        app:layout_constraintTop_toTopOf="@+id/guideline118" />

    <EditText
        android:id="@+id/dev_bpmin_mean"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/dev_bpmin_mean"
        app:layout_constraintBottom_toTopOf="@+id/guideline109"
        app:layout_constraintEnd_toStartOf="@+id/guideline111"
        app:layout_constraintStart_toStartOf="@+id/guideline94"
        app:layout_constraintTop_toTopOf="@+id/guideline108" />

    <EditText
        android:id="@+id/dev_bpmin_sd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/dev_bpmin_sd"
        app:layout_constraintBottom_toTopOf="@+id/guideline109"
        app:layout_constraintEnd_toStartOf="@+id/guideline93"
        app:layout_constraintStart_toStartOf="@+id/guideline110"
        app:layout_constraintTop_toTopOf="@+id/guideline108" />

    <Switch
        android:id="@+id/dev_encrswitch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dev_encrtext"
        app:layout_constraintBottom_toTopOf="@+id/guideline91"
        app:layout_constraintEnd_toStartOf="@+id/guideline93"
        app:layout_constraintStart_toStartOf="@+id/guideline110"
        app:layout_constraintTop_toTopOf="@+id/guideline100" />

</android.support.constraint.ConstraintLayout>